# Barrieduino

./: .gitignore  Barrieduino.ino  CMakeLists.txt  CoffeeMachine.cpp  CoffeeMachine.h  LED_ring.cpp  LED_ring.h  ROS_code.cpp  ROS_code.h  ROS_include.h  ROS_service.h  Sensors.cpp  Sensors.h  coffee_loader.ino  function_list.h  package.xml  servo_code.cpp  wire_scheme.h
firmware/: CMakeLists.txt  CoffeeMachine.cpp  CoffeeMachine.h  LED_ring.cpp  LED_ring.h  ROS_code.h  ROS_include.h  Sensors.cpp  Sensors.h  coffee_loader.ino  function_list.h  servo_code.cpp  wire_scheme.h
ros_lib/barrieduino/: HSL.h  activateOrder.h  diaphragm.h  ledRing.h  sensorRequest.h
ros_lib/beginner_tutorials/: activateOrder.h
